# data-contest-2024F

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
result/: __init__.py
result/baseline/: combined_output.csv  combined_result.py  evaluate.py
result/baseline/FinDER/: results.csv
result/baseline/FinQA/: results.csv
result/baseline/FinanceBench/: results.csv
src/: baseline-for-task-1-with-official-github.ipynb  example.py
